--- a/src/index.html
+++ b/src/index.html
@@ -5,47 +5,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-      body {
+      * {
         margin: 0;
         padding: 0;
       }
-      .container {
+      body {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        flex-flow: column;
         height: 100vh;
+        max-width: 60rem;
+        margin: auto;
       }
-      .container div {
+      header {
         display: flex;
-        justify-content: center;
-      }
-      .header, .footer {
-        height: 2em;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+        border: 1px solid green;
         padding: 0.5em;
-        border: 1px solid black;
       }
-      .footer {
-        cursor: pointer;
+      @media (orientation: portrait) {
+        header * {
+          margin: 0.5em 1em;
+        }
+        header button {
+          max-width: 40%;
+        }
+        header .info {
+          order: 1;
+          width: 100%;
+        }
       }
-      #info {
-        display: block;
-      }
-      #map {
+      content {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
         border: 1px solid red;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <span id="info" />
-      </div>
-      <div id="map"></div>
-      <div class="footer">
-        Отправить
-      </div>
-    </div>
+      <header>
+        <h1>VW</h1>
+        <p class="info">Помощь на дорогах</p>
+        <button>Отправить координаты</button>
+      </header>
+      <content>
+        <svg id="map" width="100%" height="100%"></svg>
+      </content>
     <script>
       const info = document.getElementById("info");
       const map = document.getElementById("map");
@@ -55,11 +63,10 @@
           lat: pos.coords.latitude,
           lon: pos.coords.longitude,
           accuracy: pos.coords.accuracy,
-          locationAge:  new Date() - pos.timestamp,
+          locationAge: new Date() - pos.timestamp,
           currentTime: Date.now(),
         }
-        info.textContent =
-          `Ваши координаты: (${res.lat}, ${res.lon}) с точностью ±z метров.`;
+        // `Ваши координаты: (${res.lat}, ${res.lon}) с точностью ±z метров.`;
         addTiles(res);
       }
 
