--- a/index.html
+++ b/index.html
@@ -5,47 +5,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-      body {
+      * {
         margin: 0;
         padding: 0;
       }
-      .container {
+      body {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        flex-flow: column;
         height: 100vh;
+        max-width: 60rem;
+        margin: auto;
       }
-      .container div {
+      header {
         display: flex;
-        justify-content: center;
-      }
-      .header, .footer {
-        height: 2em;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+        border: 1px solid green;
         padding: 0.5em;
-        border: 1px solid black;
       }
-      .footer {
-        cursor: pointer;
+      @media (orientation: portrait) {
+        header * {
+          margin: 0.5em 1em;
+        }
+        header button {
+          max-width: 40%;
+        }
+        header .info {
+          order: 1;
+          width: 100%;
+        }
       }
-      #info {
-        display: block;
-      }
-      #map {
+      content {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
         border: 1px solid red;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <span id="info" />
-      </div>
-      <div id="map"></div>
-      <div class="footer">
-        Отправить
-      </div>
-    </div>
+      <header>
+        <h1>VW</h1>
+        <p class="info">Помощь на дорогах</p>
+        <button>Отправить координаты</button>
+      </header>
+      <content>
+        <svg id="map" width="100%" height="100%"></svg>
+      </content>
     <script>
       const info = document.getElementById("info");
       const map = document.getElementById("map");
@@ -55,11 +63,10 @@
           lat: pos.coords.latitude,
           lon: pos.coords.longitude,
           accuracy: pos.coords.accuracy,
-          locationAge:  new Date() - pos.timestamp,
+          locationAge: new Date() - pos.timestamp,
           currentTime: Date.now(),
         }
-        info.textContent =
-          `Ваши координаты: (${res.lat}, ${res.lon}) с точностью ±z метров.`;
+        // `Ваши координаты: (${res.lat}, ${res.lon}) с точностью ±z метров.`;
         addTiles(res);
       }
 
@@ -78,24 +85,25 @@
         x = Math.floor(x);
         y = Math.floor(y);
 
-        for(let j of [-1, 0, 1]) {
-          const row = document.createElement("div");
-          for(let i of [-1, 0, 1]) {
-            const img = document.createElement("img")
-            img.src = `https://c.tile.openstreetmap.org/16/${x+i}/${y+j}.png`;
-            row.appendChild(img);
+        const ts = 256; // tile size
+        const cx = Math.floor((map.clientWidth - ts) / 2);
+        const cy = Math.floor((map.clientHeight - ts) / 2);
+        for(let i of [-1, 0, 1]) {
+          for(let j of [-1, 0, 1]) {
+            const img = document.createElementNS("http://www.w3.org/2000/svg", "image");
+            // `xlink:href` is deprecated but we use it anyway as SVG2-style
+            // `href` is not supported by iOS 11 and Safari 11.
+            img.setAttributeNS("http://www.w3.org/1999/xlink", "xlink:href",
+              `https://c.tile.openstreetmap.org/16/${x+i}/${y+j}.png`);
+            img.setAttribute("x", cx + ts*i);
+            img.setAttribute("y", cy + ts*j);
+            map.appendChild(img);
           }
-          map.appendChild(row);
         }
       }
 
-      navigator.geolocation.getCurrentPosition(success, error);
-      // success({coords: {latitude: 55.2882, longitude: -114.7783}});
+      // navigator.geolocation.getCurrentPosition(success, error);
+      success({coords: {latitude: 55.2882, longitude: -114.7783}});
     </script>
   </body>
-  <!--
-    - full width on mobile
-    - top = logo, bottom = send button
-    - center = map
-  -->
 </html>
