--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: flex;
         flex-flow: column;
         height: 100vh;
-        max-width: 60rem;
+        max-width: 50rem;
         margin: auto;
       }
       header {
@@ -21,7 +21,6 @@
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
-        border: 1px solid green;
         padding: 0.5em;
       }
       @media (orientation: portrait) {
@@ -37,11 +36,11 @@
         }
       }
       content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         flex-grow: 1;
-        border: 1px solid red;
+      }
+      svg {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
@@ -52,7 +51,7 @@
         <button>Отправить координаты</button>
       </header>
       <content>
-        <svg id="svg" width="100%" height="100%">
+        <svg id="svg">
           <g id="map"></g>
           <g id="pin">
             <g transform="translate(-12 -36) scale(0.5)" fill="#880096">
@@ -73,7 +72,7 @@
       const pi = Math.PI;
 
       function deg2tile({lon, lat}) {
-        const lrad = lat * Math.PI / 180;
+        const lrad = lat * pi / 180;
         let x = (lon + 180) / 180 * zPow;
         let y = (1 - Math.log(Math.tan(lrad) + 1/Math.cos(lrad))/pi) * zPow;
         return {x, y};
